frontend:fix: fix uneven gutter spacing

--- a/frontend/src/components/Note/Note.css
+++ b/frontend/src/components/Note/Note.css
@@ -11,9 +11,6 @@
   min-height: 110px;
   border-radius: 8px;
   transition: 0.2s;
-  margin: 10px;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .note:hover {
